mart-wal-.com/src/index.css
* {
  box-sizing: border-box;
  margin: 0;
}

html {
  font-size: 10px;
  font-family: Arial, Helvetica, sans-serif;
}

body {
  background-image: radial-gradient(rgb(0, 176, 255), rgb(153, 223, 255));
}

nav {
  display: flex;
  justify-content: start;
  background-color: black;
  align-items: stretch;
}

h1 {
  font-size: 4rem;
  font-family: "Montserrat", sans-serif;
  text-align: center;
  margin-bottom: 2rem;
  color: black;
}

h2 {
    font-size: 3rem;
    margin-bottom: 3rem;
}

header > p {
  text-align: center;
  font-size: 3rem;
  color: black;
}

button {
    background-color: black;
    color: white;
    border-radius: .5rem;
    padding: .4rem;
    cursor: pointer;
}

.page-header {
  padding: 3rem;
}

.flex-container {
  display: flex;
  margin-top: 5rem;
  justify-content: center;
  align-items: center;
}

div.positioning {
display: flex;
    justify-content: flex-end; 
    align-items: center;      
    gap: 15px;                
    margin-top: 1rem;
    margin-right: 6rem;
}

.username-welcome {
    font-size: 1.1rem;
    font-weight: bold;
}

.logout-button {
    background-color: black;
    color: white;
    border-radius: .5rem;
    padding: .4rem 1rem;
    cursor: pointer;
    border: none;
}

.promo-header {
    margin: 3rem;
}

.flex-container {
    display: flex;
    justify-content: center;
    height: auto;
}

.promo-container {
    background-color: white;
    border: double black 7px;
    margin: 3rem;
    width: 100%;
    text-align: center;
    padding: 3rem;
}

.navbar ul {
  display: flex;
  list-style-type: none;
  padding: 0;
  font-size: 1.6rem;
  width: 100%;
  height: 100%;
}

.navbar li a {
  display: block;
  text-decoration: none;
  padding: 1rem;
  text-align: center;
  color: white;
  background-color: black;
  height: 100%;
  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
}

li a:not(.active):hover {
  color: white;
  text-shadow: 2px 2px 5px white;
}

li a.active {
  background-color:#007AFF;
  color: black;
}

@media screen and (max-width: 920px) {
  .navbar ul {
    flex-direction: column;
    height: auto;
  }

  .navbar li { 
    width: 100%;
    border-bottom: 1px solid #333;
  }

  .navbar li a {
    text-align: center;
    padding: 1.5rem;
  }
}

